--- a/site-cadastro/src/index.css
+++ b/site-cadastro/src/index.css
@@ -13,3 +13,14 @@
     rgba(143, 0, 19, 1) 100%
   );
 }
+
+.buttonHome {
+  background-color: var(--color-web-gray);
+  color: black;
+  cursor: pointer;
+  border: 1px solid var(--color-web-red);
+  border-radius: 8px;
+  width: 200px;
+  padding: 10px; 
+}
+ 
